[package]
name = "buffer_cli"
description = "A simple command-line interface tool to interact with the Buffer GraphQL API."
authors = ["Carlos Durán <formatocd@proton.me>"]
license = "MIT"
repository = "https://github.com/formatocd/buffer_cli"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
